<resources>
    <string name="app_name">MyProjectKotlin</string>

    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="item_detail_nombre_usuario">Nombre</string>
    <string name="item_detail_nombre_usuario_example" translatable="false">Cesar Herrera</string>
    <string name="item_detail_apellido_usuario">Apellido</string>
    <string name="item_detail_direccion_usuario">Dirección</string>
    <string name="item_detail_dni_usuario">DNI</string>
    <string name="et_username">Usuario</string>
    <string name="text_login_button">Ingresar</string>
    <string name="civ_transition">circleImageTransition</string>
    <string name="profile_social_likes">Likes</string>
    <string name="profile_social_metrics">-</string>
    <string name="profile_social_posts">Posts</string>
    <string name="profile_social_shares">Shares</string>
    <string name="profile_social_friends">Friends</string>
    <string name="profile_years">26 years old</string>
    <string name="profile_email">rzknairb@gmail.com</string>
    <string name="profile_location">Trujillo, Peru</string>
    <string name="profile_occupation">Developer</string>
    <string name="comment_item_example">commnet</string>
    <string name="feed_username">Luke Korns</string>
    <string name="feed_description">Amazing</string>
    <string name="feed_item_like">16</string>
    <string name="feed_item_comment">Comment</string>
</resources>